--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,8 @@ header {
 }
 
 header, h1 {
+  font-family: 'Playfair Display SC';
+  font-size: 64px;
   display: flex;
   justify-content: center;
 }
